iac/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workout-namespace
  labels:
    name: workout-namespace
