iac/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workout-app-service
spec:
  selector:
    app: workout-app
  ports:
  - port: 8000
  type: ClusterIP
